--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,10 @@ edition = "2018"
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 itertools = "0.8.2"
-num_enum = "0.4.2"
-bytecount = "0.6.0"
 regex = "1.3.1"
 lazy_static = "1.4.0"
-num = "0.2.0"
 rayon = "1.2.1"
-string-interner = "0.7.1"
-id-arena = "2.2.1"
+enumflags2 = "0.7.2"
 
 [dev-dependencies]
 pretty_assertions = "1.0.0"
